--- a/css/styles.css
+++ b/css/styles.css
@@ -48,9 +48,9 @@ body {
   line-height: 1.14;
   letter-spacing: 0.02em;
   font-weight: 500;
-  fill: currentColor;
+  /* fill: currentColor; */
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    /* fill 250ms cubic-bezier(0.4, 0, 0.2, 1); */
 }
 .header-contacts {
   display: flex;
@@ -72,7 +72,7 @@ body {
 .link-header:hover,
 .link-header:focus {
   color: var(--accent-color);
-  fill: var(--accent-color);
+  /* fill: var(--accent-color); */
 }
 .link {
   text-decoration: none;
@@ -123,6 +123,10 @@ body {
   line-height: 1.19;
   color: var(--black-color);
 }
+
+.link-logo:hover, .link-logo:focus {text-decoration: none;
+color: var(--black-color);}
+
 .icon-header {
   margin-right: 10px;
   fill: currentColor;
@@ -436,6 +440,12 @@ body {
   line-height: 1.19;
   padding: 0px;
 }
+.footer-link:hover, .footer-link:focus {text-decoration:none;
+color: var(--white-color);}
+
+.address-link:hover, .address-link:focus {text-decoration:none;
+color: var(--white-color);}
+
 .footer-styles {
   list-style: none;
   padding: 0px;
@@ -484,8 +494,6 @@ body {
 .join-link:hover,
 .join-link:focus {
   background-color: var(--accent-color);
-  fill: var(--white-color);
-  border-radius: 50%;
 }
 
 .style-footer {
