--- a/css/styles.css
+++ b/css/styles.css
@@ -48,9 +48,7 @@ body {
   line-height: 1.14;
   letter-spacing: 0.02em;
   font-weight: 500;
-  /* fill: currentColor; */
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    /* fill 250ms cubic-bezier(0.4, 0, 0.2, 1); */
 }
 .header-contacts {
   display: flex;
@@ -203,7 +201,6 @@ color: var(--black-color);}
   border-radius: 4px;
   padding: 10px 32px;
   margin-top: var(--column-gap);
-
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .button:hover,
@@ -318,9 +315,8 @@ color: var(--black-color);}
   align-items: center;
   justify-content: center;
   color: var(--icons-color);
-  /* fill: currentColor; */
   border-radius: 50%;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
   background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .team-link:hover,
@@ -469,16 +465,11 @@ color: var(--white-color);}
   display: flex;
   align-items: center;
   justify-content: center;
-  /* color: var(--white-color);
-  fill: currentColor; */
   background-color: rgba(255, 255, 255, 0.1);
   border-radius: 50%;
   width: 44px;
   height: 44px;
-
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    /* fill 250ms cubic-bezier(0.4, 0, 0.2, 1), */
-    border-radius 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
 
 .footer-icon {fill: var(--white-color);}
