--- a/css/styles.css
+++ b/css/styles.css
@@ -492,6 +492,58 @@ color: var(--white-color);}
   column-gap: 70px;
   align-items: baseline;
 }
+
+/* start */
+.footer-form-container{
+    margin-left: auto;
+}
+.input-footer{
+    display: flex;
+}
+.title-form-footer{
+    margin-bottom: 20px;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+
+}
+.footer-form{
+    width: 358px;
+    height: 50px;
+    padding: 15px 16px;
+    font-size: 16px;
+    line-height: 1.25;
+    letter-spacing: 0.03em;
+    background-color: var(--second-background-color);
+    color: rgba(255, 255, 255, 0.6);
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+}
+.footer-button{
+    display: flex;
+    align-items: center;
+    text-align: center;
+    justify-content: space-between;
+    cursor: pointer;
+    padding: 10px 28px ;
+    width: 200px;
+    height: 50px;
+    margin-left: 12px;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;
+    letter-spacing: 0.06em;
+    color: var(--white-color);
+    background-color: var(--accent-color);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    border: 0px;
+}
+
+/* fin */
 .portfolio-link {
   text-decoration: none;
   color: var(--primary-text-color);
@@ -637,10 +689,9 @@ color: var(--white-color);}
 }
 .modal {
   position: absolute;
-
   top: 50%;
   left: 50%;
-  padding: 8px;
+  padding: 40px;
   transform: translate(-50%, -50%) scale(1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
@@ -666,3 +717,142 @@ color: var(--white-color);}
   fill: currentColor;
 }
 
+/* start2 */
+.modal-title{
+    margin-bottom: 12px;
+    text-align: center;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 1.15;
+    letter-spacing: 0.03em;
+}
+.input-modal{
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    margin-bottom: 10px;
+    font-size: 12px;
+    line-height: 1.66;
+    letter-spacing: 0.01em;
+    color: var(--primary-text-color);
+    
+    transition:  fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.input-modal-form{
+    display: block;
+    width: 100%;
+    resize: none;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    height: 40px;
+    padding: 12px 42px;
+    fill: currentColor;
+
+    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.input-modal-form:hover, .input-modal-form:focus{
+    border: 1px solid var(--accent-color);
+    outline: none;
+}
+.input-modal:hover, .input-modal:focus-within{
+   
+   fill: var(--accent-color);
+  }
+
+.comment{
+    margin-top: 4px;
+    padding-left: 16px;
+    resize: none;
+    width: 448px;
+    height: 120px;
+    color: rgba(117, 117, 117, 0.5);
+}
+.fornm-comment{
+    margin-bottom: 20px;
+}
+.send-button{
+    width: 200px;
+    height: 50px;
+    padding:0;
+    background-color:var(--accent-color);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    border: none;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;
+    text-align: center;
+    letter-spacing: 0.06em;
+    color: var(--white-color);
+    cursor: pointer;
+
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.send-button:hover, .send-button:focus{
+    background: #188CE8;
+}
+.title-checkbox{
+    display: block;
+    margin-left: 8px;
+    font-size: 14px;
+    line-height: 1.71;    
+    letter-spacing: 0.03em;
+    color: var(--primary-text-color);
+    margin-bottom: 30px;
+}
+.checkbox{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.modal-link{
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    color: var(--accent-color); 
+  
+}
+.modal-link:hover{
+    text-decoration: none;
+}
+.icon-form{
+    position: absolute;
+    top:50%;
+    left:12px;
+    transform: translateY(-50%);
+    width: 18px;
+    height: 18px;
+    
+}
+.checkbox-icon{
+    display: inline-block;
+    position: absolute;
+    top: 5px;
+    left: 14px;
+    width: 16px;
+    height: 15px;
+    border: 2px solid var(--title-text-color);
+    border-radius: 2px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
+}
+.checkbox-item:checked + .checkbox-icon{
+    background-color: var(--accent-color);
+    background-image: url(../images/icon\ check.svg);
+    background-size: contain;
+    background-origin: border-box;
+    border-color: var(--accent-color);
+}
+ .checkbox-item:focus+.checkbox-icon {
+    border-color: var(--accent-color);
+ }
+.position{
+    position: relative;
+}
+.label{
+    font-size: 12px;
+    line-height: 1.16;
+    letter-spacing: 0.01em;
+    margin-bottom: 4px;
+}
+/* fin2 */
