--- a/css/styles.css
+++ b/css/styles.css
@@ -48,7 +48,7 @@ body {
   line-height: 1.14;
   letter-spacing: 0.02em;
   font-weight: 500;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1)
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .header-contacts {
   display: flex;
@@ -122,8 +122,11 @@ body {
   color: var(--black-color);
 }
 
-.link-logo:hover, .link-logo:focus {text-decoration: none;
-color: var(--black-color);}
+.link-logo:hover,
+.link-logo:focus {
+  text-decoration: none;
+  color: var(--black-color);
+}
 
 .icon-header {
   margin-right: 10px;
@@ -305,7 +308,9 @@ color: var(--black-color);}
   margin-top: 10px;
 }
 
-.svg-team {fill: currentColor;}
+.svg-team {
+  fill: currentColor;
+}
 
 .team-link {
   text-decoration: none;
@@ -317,7 +322,7 @@ color: var(--black-color);}
   color: var(--icons-color);
   border-radius: 50%;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-  background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .team-link:hover,
 .team-link:focus {
@@ -436,11 +441,17 @@ color: var(--black-color);}
   line-height: 1.19;
   padding: 0px;
 }
-.footer-link:hover, .footer-link:focus {text-decoration:none;
-color: var(--white-color);}
+.footer-link:hover,
+.footer-link:focus {
+  text-decoration: none;
+  color: var(--white-color);
+}
 
-.address-link:hover, .address-link:focus {text-decoration:none;
-color: var(--white-color);}
+.address-link:hover,
+.address-link:focus {
+  text-decoration: none;
+  color: var(--white-color);
+}
 
 .footer-styles {
   list-style: none;
@@ -469,10 +480,12 @@ color: var(--white-color);}
   border-radius: 50%;
   width: 44px;
   height: 44px;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1)
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer-icon {fill: var(--white-color);}
+.footer-icon {
+  fill: var(--white-color);
+}
 
 .join-contact {
   margin: var(--margin-none);
@@ -489,58 +502,57 @@ color: var(--white-color);}
 
 .style-footer {
   display: flex;
-  column-gap: 70px;
   align-items: baseline;
+  justify-content: space-between;
 }
 
 /* start */
-.footer-form-container{
-    margin-left: auto;
+.footer-form-container {
+color: var(--white-color);
 }
-.input-footer{
-    display: flex;
+.input-footer {
+  display: flex;
 }
-.title-form-footer{
-    margin-bottom: 20px;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-
+.title-form-footer {
+  margin-bottom: 20px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
 }
-.footer-form{
-    width: 358px;
-    height: 50px;
-    padding: 15px 16px;
-    font-size: 16px;
-    line-height: 1.25;
-    letter-spacing: 0.03em;
-    background-color: var(--second-background-color);
-    color: rgba(255, 255, 255, 0.6);
-    border: 1px solid rgba(255, 255, 255, 0.3);
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-    border-radius: 4px;
+.footer-form {
+  width: 358px;
+  height: 50px;
+  padding: 15px 16px;
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.03em;
+  background-color: var(--second-background-color);
+  color: rgba(255, 255, 255, 0.6);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
 }
-.footer-button{
-    display: flex;
-    align-items: center;
-    text-align: center;
-    justify-content: space-between;
-    cursor: pointer;
-    padding: 10px 28px ;
-    width: 200px;
-    height: 50px;
-    margin-left: 12px;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1.88;
-    letter-spacing: 0.06em;
-    color: var(--white-color);
-    background-color: var(--accent-color);
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    border-radius: 4px;
-    border: 0px;
+.footer-button {
+  display: flex;
+  align-items: center;
+  text-align: center;
+  justify-content: space-between;
+  cursor: pointer;
+  padding: 10px 28px;
+  width: 200px;
+  height: 50px;
+  margin-left: 12px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  color: var(--white-color);
+  background-color: var(--accent-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border: 0px;
 }
 
 /* fin */
@@ -677,7 +689,8 @@ color: var(--white-color);}
   height: 100%;
   background: rgba(0, 0, 0, 0.2);
   opacity: 1;
-  transition: opasity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opasity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .backdrop.is-hidden {
   opacity: 0;
@@ -718,141 +731,141 @@ color: var(--white-color);}
 }
 
 /* start2 */
-.modal-title{
-    margin-bottom: 12px;
-    text-align: center;
-    font-weight: 700;
-    font-size: 20px;
-    line-height: 1.15;
-    letter-spacing: 0.03em;
+.modal-title {
+  margin-bottom: 12px;
+  text-align: center;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  letter-spacing: 0.03em;
 }
-.input-modal{
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    margin-bottom: 10px;
-    font-size: 12px;
-    line-height: 1.66;
-    letter-spacing: 0.01em;
-    color: var(--primary-text-color);
-    
-    transition:  fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.input-modal-form{
-    display: block;
-    width: 100%;
-    resize: none;
-    border: 1px solid rgba(33, 33, 33, 0.2);
-    border-radius: 4px;
-    height: 40px;
-    padding: 12px 42px;
-    fill: currentColor;
+.input-modal {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  margin-bottom: 10px;
+  font-size: 12px;
+  line-height: 1.66;
+  letter-spacing: 0.01em;
+  color: var(--primary-text-color);
 
-    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.input-modal-form:hover, .input-modal-form:focus{
-    border: 1px solid var(--accent-color);
-    outline: none;
-}
-.input-modal:hover, .input-modal:focus-within{
-   
-   fill: var(--accent-color);
-  }
+.input-modal-form {
+  display: block;
+  width: 100%;
+  resize: none;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  height: 40px;
+  padding: 12px 42px;
+  fill: currentColor;
 
-.comment{
-    margin-top: 4px;
-    padding-left: 16px;
-    resize: none;
-    width: 448px;
-    height: 120px;
-    color: rgba(117, 117, 117, 0.5);
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.fornm-comment{
-    margin-bottom: 20px;
-}
-.send-button{
-    width: 200px;
-    height: 50px;
-    padding:0;
-    background-color:var(--accent-color);
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    border-radius: 4px;
-    border: none;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1.88;
-    text-align: center;
-    letter-spacing: 0.06em;
-    color: var(--white-color);
-    cursor: pointer;
 
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+.input-modal-form:focus {
+  border: 1px solid var(--accent-color);
+  outline: none;
 }
-.send-button:hover, .send-button:focus{
-    background: #188CE8;
+.input-modal:hover,
+.input-modal:focus-within {
+  fill: var(--accent-color);
 }
-.title-checkbox{
-    display: block;
-    margin-left: 8px;
-    font-size: 14px;
-    line-height: 1.71;    
-    letter-spacing: 0.03em;
-    color: var(--primary-text-color);
-    margin-bottom: 30px;
+
+.comment {
+  margin-top: 4px;
+  padding-left: 16px;
+  resize: none;
+  width: 100%;
+  height: 120px;
+  color: rgba(117, 117, 117, 0.5);
 }
-.checkbox{
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.fornm-comment {
+  margin-bottom: 20px;
 }
-.modal-link{
-    font-size: 14px;
-    line-height: 1.71;
-    letter-spacing: 0.03em;
-    color: var(--accent-color); 
-  
+.send-button {
+  width: 200px;
+  height: 50px;
+  padding: 0;
+  background-color: var(--accent-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border: none;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  text-align: center;
+  letter-spacing: 0.06em;
+  color: var(--white-color);
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-link:hover{
-    text-decoration: none;
+.send-button:hover,
+.send-button:focus {
+  background: #188ce8;
 }
-.icon-form{
-    position: absolute;
-    top:50%;
-    left:12px;
-    transform: translateY(-50%);
-    width: 18px;
-    height: 18px;
-    
+.title-checkbox {
+  display: block;
+  margin-left: 8px;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: var(--primary-text-color);
+  margin-bottom: 30px;
 }
-.checkbox-icon{
-    display: inline-block;
-    position: absolute;
-    top: 5px;
-    left: 14px;
-    width: 16px;
-    height: 15px;
-    border: 2px solid var(--title-text-color);
-    border-radius: 2px;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
+.checkbox {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-.checkbox-item:checked + .checkbox-icon{
-    background-color: var(--accent-color);
-    background-image: url(../images/icon\ check.svg);
-    background-size: contain;
-    background-origin: border-box;
-    border-color: var(--accent-color);
+.modal-link {
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: var(--accent-color);
 }
- .checkbox-item:focus+.checkbox-icon {
-    border-color: var(--accent-color);
- }
-.position{
-    position: relative;
+.modal-link:hover {
+  text-decoration: none;
 }
-.label{
-    font-size: 12px;
-    line-height: 1.16;
-    letter-spacing: 0.01em;
-    margin-bottom: 4px;
+.icon-form {
+  position: absolute;
+  top: 50%;
+  left: 12px;
+  transform: translateY(-50%);
+  width: 18px;
+  height: 18px;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.checkbox-icon {
+  display: inline-block;
+  position: absolute;
+  top: 5px;
+  left: 14px;
+  width: 16px;
+  height: 15px;
+  border: 2px solid var(--title-text-color);
+  border-radius: 2px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.checkbox-item:checked + .checkbox-icon {
+  background-color: var(--accent-color);
+  background-image: url(../images/icon\ check.svg);
+  background-size: contain;
+  background-origin: border-box;
+  border-color: var(--accent-color);
+}
+.checkbox-item:focus + .checkbox-icon {
+  border-color: var(--accent-color);
+}
+.position {
+  position: relative;
+}
+.label {
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+  margin-bottom: 4px;
 }
 /* fin2 */
