--- a/css/styles.css
+++ b/css/styles.css
@@ -527,11 +527,17 @@ body {
   line-height: 1.25;
   letter-spacing: 0.03em;
   background-color: var(--second-background-color);
-  color: rgba(255, 255, 255, 0.6);
+  color: rgba(255, 255, 255);
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
 }
+
+.footer-form::placeholder {
+  padding-left: 16px;
+  font-size: 16px;
+  line-height: 1.25;
+  color: rgba(255, 255, 255, 0.6);}
 
 .footer-button {
   display: flex;
